feat(utils): new util to print menus, fix(javaDoc): improved javaDoc comments